--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "calc",
   "version": "0.1.0",
   "private": true,
-  "homepage":"https://Roagen7.github.io/calculator",
+  "homepage":"https://Roagen7.github.io/calc",
   "dependencies": {
     "gh-pages": "^2.1.1",
     "react": "^16.9.0",
